댓글 기능 추가

--- a/src/main/resources/static/css/board_view_main.css
+++ b/src/main/resources/static/css/board_view_main.css
@@ -48,3 +48,9 @@ section #buttons {
     text-align:right;
     margin:20px 0 0 0;
 }
+
+span.file_info {
+	
+	font-size: 11px;
+	color: #808080;
+}
